--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ idna==3.4
 mysqlclient==2.1.1
 oauthlib==3.2.2
 packaging==23.1
+Pillow==10.0.1
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
